# CodeBLOb

./: .dockerignore  .env.example  .gitignore  CHAT_API_CHANGES.md  DEPLOYMENT_READY.md  Dockerfile  README.md  check_cuda.py  docker-compose.yml  plan.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  test_chat_request.py  test_db_connection.py  test_retriever_v1.1.py  test_step1_filtering.py
backend/: cache.py  chat_history.py  function_tools.py  itinerary.py  llm_base.py  main.py  query_expansion.py  rag_chain.py  retriever.py  schemas.py  unified_chat.py
config/: query_expansion.json
docs/: API_INTEGRATION_FOR_NODE.md  CHAT_API_SPEC.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  EMBEDDING_PLAN.md  FILE_CATALOG.md  IMPLEMENTATION_TRACKER.md  ITINERARY_RECOMMENDATION.md  PROJECT_PLAN.md  PROJECT_STATUS.md  RAG_PIPELINE_ARCHITECTURE.md  README.md  REDIS_CACHE_GUIDE.md  WORK_STATUS.md  chat_response_examples.md  openapi_rag.yaml  readme!!!!.md  프로젝트_계획서.md
pyback/: generate_report.py
scripts/: DOCUMENTATION_INDEX.md  commit_activity_tracker.md  commit_activity_tracker.py  embed_initial_data.py  embed_initial_data_v1.1.py  embedding_utils.py  embedding_utils_v1.1.py  manual_chat_smoke.js  monitor_embedding.sh  node_rag_client.js  watch_progress.sh
tests/: conftest.py  test_api.py  test_api_integration.py  test_chat_handler.py  test_chat_history.py  test_chat_integration.py  test_connection_pool.py  test_embedding_injection.py  test_function_tools.py  test_itinerary_api.py  test_itinerary_structured.py  test_parallel_expansion.py  (+10 more)
(+377368 files in other folders)
